# ardupilot_gazebo

./: .gitignore  Brewfile  CMakeLists.txt  CPPLINT.cfg  DOCUMENTATION_REVIEW.md  INSTALL.md  README.md  START_HERE.md  VALIDATION_GUIDE.md  WORKING_CONFIG.md  package.xml  run_gazebo.sh  start_gui.sh  start_sitl_gazebo.sh  verify_setup.sh
.github/: CONTRIBUTING.md  SUPPORT.md
.github/workflows/: ccpcheck.yml  ccplint.yml  test_build.yml  ubuntu-build.yml
ardupilot_gazebo/: package.xml
ardupilot_gazebo/hooks/: ardupilot_gazebo.sh.in
ardupilot_gazebo/include/: CameraZoomPlugin.hh  SelectionBuffer.hh  Util.hh
ardupilot_gazebo/models/gimbal_small_2d/: model.config  model.sdf
ardupilot_gazebo/models/gimbal_small_3d/meshes/: yaw_arm.dae
ardupilot_gazebo/models/iris_with_standoffs/: model.config  model.sdf
ardupilot_gazebo/models/parachute_small/: model.config
ardupilot_gazebo/models/runway/: model.sdf
ardupilot_gazebo/models/runway/meshes/: airfield.dae
ardupilot_gazebo/models/zephyr_with_ardupilot/: model.config  model.sdf
ardupilot_gazebo/models/zephyr_with_parachute/: model.config  model.sdf
ardupilot_gazebo/src/: Socket.cpp  Util.cc
ardupilot_gazebo/worlds/: gimbal.sdf  iris_warehouse.sdf
ardupilot_gazebo_sitl_viewer/: CMakeLists.txt  README.md  package.xml
ardupilot_gazebo_sitl_viewer/hooks/: ardupilot_gazebo_sitl_viewer.dsv.in  ardupilot_gazebo_sitl_viewer.sh.in
ardupilot_gazebo_sitl_viewer/include/ardupilot_gazebo_sitl_viewer/: SitlViewer.hpp
ardupilot_gazebo_sitl_viewer/src/: SitlViewer.cpp  SitlViewerNode.cpp
config/: gazebo-iris-gimbal.parm  skywalker_x8.parm  skywalker_x8_quad.parm  skywalker_x8_quad_v0.parm  skywalker_x8_training_mission.txt  skywalker_x8_v0.parm  skywalker_x8_v1.parm  skywalker_x8_v2.parm
hooks/: ardupilot_gazebo.dsv.in  ardupilot_gazebo.sh.in
include/: ArduCopterIRLockPlugin.hh  ArduPilotPlugin.hh  CameraZoomPlugin.hh  CatapultPlugin.hh  GimbalSmall2dPlugin.hh  GstCameraPlugin.hh  MotorPlugin.hh  ParachutePlugin.hh  Socket.h  SocketUDP.hh  Util.hh
models/OakD-Lite/: model.sdf
models/camera/: model.config  model.sdf
models/gimbal_small_1d/: model.config  model.sdf
models/gimbal_small_2d/: model.config  model.sdf
models/gimbal_small_3d/: model.config  model.sdf
models/gimbal_small_3d/meshes/: base_plate.dae  camera_enclosure.dae  roll_arm.dae
models/hexa/: model.config  model.sdf
models/iris_with_ardupilot/: model.config  model.sdf
models/iris_with_camera/: model.config  model.sdf
models/iris_with_gimbal/: model.config  model.sdf
models/iris_with_standoffs/: model.config  model.sdf
models/iris_with_standoffs/meshes/: iris_collision.stl
models/iris_with_standoffs_demo2/: model.sdf
models/launchpad/: model.config  model.sdf
models/male/: model.sdf
models/mini_talon_vtail/: model.config  model.sdf
models/mini_talon_vtail/meshes/: mini_talon_forward_deck.dae  mini_talon_fuselage.dae  mini_talon_fuselage_collision.stl  mini_talon_fuselage_logos.dae  mini_talon_left_aileron.dae  mini_talon_left_ruddervator.dae  mini_talon_left_tail.dae  mini_talon_left_tail_collision.stl  mini_talon_left_wing.dae  mini_talon_left_wing_collision.stl  mini_talon_left_wing_logo.dae  mini_talon_main_wheel.dae  mini_talon_main_wheel_collision.stl  mini_talon_right_aileron.dae  mini_talon_right_ruddervator.dae  mini_talon_right_tail.dae  mini_talon_right_tail_collision.stl  mini_talon_right_wing.dae  mini_talon_right_wing_collision.stl  propdrive_3536_frontplate.dae  propdrive_3536_motor_can.dae
models/mini_talon_vtail_cam/: model.config  model.sdf
models/oak6/: model.sdf
models/oak7/: model.sdf
models/oak8/: model.sdf
models/oak9/: model.sdf
models/parachute/: model.config  model.sdf
models/parachute_small/: model.config  model.sdf
models/runway/: model.config  model.sdf
models/skywalker_x8/: model.config  model.sdf
models/skywalker_x8/meshes/: iris_prop_ccw.dae  iris_prop_cw.dae  x8_elevon_left.dae  x8_elevon_right.dae  x8_wing.dae
models/skywalker_x8_quad/: model.config  model.sdf
models/tether/: model.config  model.sdf  tether.sdf.jinja
models/typhoon_h480/: typhoon_h480.sdf
models/typhoon_h480/meshes/: cgo3_mount_remeshed_v1.stl:Zone.Identifier
models/wildthumper/: model.config  model.sdf
models/wildthumper/meshes/bases/: left_motor_asm.dae  left_motor_asm.stl  right_motor_asm.dae  right_motor_asm.stl  small_chassis_with_frame_connector.dae  small_chassis_with_frame_connector.stl  top_chassis.stl  top_chassis_with_standoffs.stl  wheel_chassis_long.dae  wheel_chassis_long.stl  wheel_chassis_short.dae  wheel_chassis_short.stl
models/wildthumper/meshes/sensors/: gp2y0a21yk.stl  hcsr04.stl  intel_realsense_d415.stl  intel_realsense_t265.stl  rplidar_a1_low.stl
models/zephyr/: model.config  model.sdf
models/zephyr_with_ardupilot/: model.config  model.sdf
models/zephyr_with_ardupilot/meshes/: wing.dae
models/zephyr_with_catapult/: model.sdf
models/zephyr_with_parachute/: model.config  model.sdf
proto/ardupilot_gazebo/msgs/: motor_stats.proto  motor_status.proto
scripts/: gz_ros_subs.py  motor_stats.py  motor_status.py
src/: ArduCopterIRLockPlugin.cc  ArduPilotJson.cc  ArduPilotPlugin.cc  CameraZoomPlugin.cc  CatapultPlugin.cc  GimbalSmall2dPlugin.cc  GstCameraPlugin.cc  GstCameraPlugin.cpp  JsonCppExample.cc  MotorPlugin.cc  ParachutePlugin.cc  RapidJsonExample.cc  SITLSocketExample.cc  Socket.cpp  SocketExample.cc  SocketUDP.cc  Util.cc  cameraPlugin.cc  socket_example.py
tests/worlds/: test_anemometer.sdf  test_gimbal.sdf  test_nested_model.sdf  test_parachute.sdf
worlds/: anemometer_demo.world  hexa.world  iris_arducopter_cmac.world  iris_arducopter_demo2.world  iris_arducopter_edifice_demo.world  iris_arducopter_runway.world  iris_gimbal.sdf  iris_runway.sdf  iris_warehouse.sdf  motor_model.sdf  nidar_duniya.sdf  skywalker_x8_arduplane_runway.world  skywalker_x8_quad_arduplane_runway.world  test_parachute.sdf  vtail_runway.sdf  wildthumper_runway.sdf  zephyr_arduplane_runway.world  zephyr_catapult.sdf  zephyr_parachute.sdf  zephyr_runway.sdf
(+12 files in other folders)
