<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardupilot_gazebo</name>
  <version>0.0.0</version>
  <description>Plugins and models for vehicle simulation in Gazebo Sim with ArduPilot SITL controllers</description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>LGPL-3.0</license>
  <author>Rhys Mainwaring</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rapidjson-dev</build_depend>  

  <!-- Harmonic (default) -->
  <depend condition="$GZ_VERSION == harmonic">gz-cmake3</depend>
  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
  <depend condition="$GZ_VERSION == ''">gz-cmake3</depend>
  <depend condition="$GZ_VERSION == ''">gz-sim8</depend>
  <!-- Garden -->
  <depend condition="$GZ_VERSION == garden">gz-cmake3</depend>
  <depend condition="$GZ_VERSION == garden">gz-sim7</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

